--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Robot Gladiators!</title>
+    <link rel="stylesheet" href="./assets/style.css">
+    <title>Coding Quiz</title>
   </head>
   <body>
-    <script src="./assets/js/game.js"></script>
+    <script src="./assets/game.js"></script>
   </body>
 </html>
